meta loader script test

--- a/index.html
+++ b/index.html
@@ -1,48 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="index english">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description of the webpage for SEO purposes -->
-    <meta
-      name="description"
-      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
-    />
-
-    <!-- Viewport settings for responsive design (commented out maximum scale) -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords relevant to the webpage for SEO -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for defining the color scheme of the website (for light mode only) -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the webpage -->
-    <meta name="author" content="Kathrin Peled Draclady" />
-
-    <!-- Robots meta tag to instruct search engines to index the page -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for sharing on social media -->
-    <meta
-      property="og:title"
-      content="Kathrin Peled - Web Developer Portfolio"
-    />
-    <meta
-      property="og:description"
-      content="Explore Kathrin Peled's portfolio showcasing her web development projects and skills."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta property="og:url" content="https://draculady.de/" />
-    <meta property="og:type" content="website" />
+    <script src="./Scripts/metaLoader.js" type="text/javascript"></script>
 
     <!-- Alternate language versions of the homepage -->
     <link
@@ -764,6 +723,5 @@
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js"></script>
     <script src="./Scripts/checkLinks.js" defer></script>
-
   </body>
 </html>
