meta loader script test

--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -195,7 +195,7 @@
                     >
                     from the
                     <a
-                      href="https://www.technion.ac.il/en/home-2/"
+                      href="https://www.technion.ac.il"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Visit Technion website"
@@ -508,7 +508,7 @@
                       <span class="link-span"
                         >Graduated from the
                         <a
-                          href="https://www.technion.ac.il/en/home-2/"
+                          href="https://www.technion.ac.il"
                           target="_blank"
                           rel="noopener noreferrer"
                           aria-label="Visit Technion website"
