--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -194,7 +194,7 @@
                     >
                     vom
                     <a
-                      href="https://www.technion.ac.il/en/home-2/"
+                      href="https://www.technion.ac.il"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Visit Technion website"
@@ -509,7 +509,7 @@
                       <span class="link-span">
                         Habe am
                         <a
-                          href="https://www.technion.ac.il/en/home-2/"
+                          href="https://www.technion.ac.il"
                           target="_blank"
                           rel="noopener noreferrer"
                           aria-label="Visit Technion website"
