--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -196,7 +196,7 @@
                     >
                     vom
                     <a
-                      href="https://www.technion.ac.il/en/home-2/"
+                      href="https://www.technion.ac.il"
                       target="_blank"
                       rel="noopener noreferrer"
                       aria-label="Visit Technion website"
@@ -505,7 +505,7 @@
                     <span class="link-span">
                       Habe am
                       <a
-                        href="https://www.technion.ac.il/en/home-2/"
+                        href="https://www.technion.ac.il"
                         target="_blank"
                         rel="noopener noreferrer"
                         aria-label="Visit Technion website"
