--- a/index-german.html
+++ b/index-german.html
@@ -162,7 +162,7 @@
                   >
                   an der
                   <a
-                    href="https://www.technion.ac.il/en/home-2/"
+                    href="https://www.technion.ac.il"
                     target="_blank"
                     aria-label="Technion, Israeli Institute of Technology in Haifa"
                     >Technion (Israelisches Institut für Technologie)</a
