--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                   >
                   at the
                   <a
-                    href="https://www.technion.ac.il/en/home-2/"
+                    href="https://www.technion.ac.il"
                     target="_blank"
                     aria-label="Technion, Israeli Institute of Technology in Haifa"
                     >Technion (Israeli Institute of Technology)</a
