meta loader script test

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-page="index english">
   <head>
     <script src="./Scripts/metaLoader.js" type="text/javascript"></script>
-   <script src="https://draculady.de/Scripts/metaLoader.js"></script> 
+    <!-- <script src="https://draculady.de/Scripts/metaLoader.js"></script>  -->
     <!-- Alternate language versions of the homepage -->
     <link
       rel="alternate"
