--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="index english">
   <head>
-    <script src="./Scripts/metaLoader.js" type="text/javascript"></script>
+    <script src="./Scripts/metaLoader.js"></script>
     <!-- <script src="https://draculady.de/Scripts/metaLoader.js"></script>  -->
     <!-- Alternate language versions of the homepage -->
     <link
