meta loader script test

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-page="index english">
   <head>
-    <script src="./Scripts/metaLoader.js"></script>
     <!-- <script src="https://draculady.de/Scripts/metaLoader.js"></script>  -->
     <!-- Alternate language versions of the homepage -->
     <link
@@ -723,5 +722,6 @@
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js"></script>
     <script src="./Scripts/checkLinks.js" defer></script>
+    <script src="./Scripts/metaLoader.js" type="text/javascript" defer></script>
   </body>
 </html>
