meta loader script test - complete

--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -1,48 +1,6 @@
 <!DOCTYPE html>
 <html lang="de" data-page="files german">
   <head>
-    <!-- Character encoding declaration -->
-    <meta charset="UTF-8" />
-
-    <!-- Page description for SEO and social media -->
-    <meta
-      name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
-    />
-
-    <!-- Responsive design settings -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for SEO -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-
-    <!-- Search engine indexing instructions -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for Files Page (German) -->
-    <meta property="og:title" content="Dateien von Kathrin Peled" />
-    <meta
-      property="og:description"
-      content="Entdecken Sie die Dateien und Ressourcen, die von Kathrin Peled geteilt werden."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/files-german.html"
-    />
-    <meta property="og:type" content="website" />
 
     <!-- Alternate language links for multilingual support -->
     <link
@@ -236,6 +194,7 @@
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
     <script src="../Scripts/checkLinks.js" defer></script>
+    <script src="../Scripts/metaLoader.js" type="text/javascript" defer></script>
 
   </body>
 </html>
