--- a/Pages/portfolio-english.html
+++ b/Pages/portfolio-english.html
@@ -1,49 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-page="portfolio english">
   <head>
-    <!-- Character set for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description for SEO purposes -->
-    <meta
-      name="description"
-      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
-    />
-
-    <!-- Viewport settings for responsive design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for search engines -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-
-    <!-- Instructions for web crawlers -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for Portfolio Page -->
-    <meta property="og:title" content="Kathrin Peled - Portfolio" />
-    <meta
-      property="og:description"
-      content="Discover my web development projects and skills."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/portfolio-english.html"
-    />
-    <meta property="og:type" content="website" />
-
     <!-- Alternate language versions -->
     <link
       rel="alternate"
@@ -812,7 +769,6 @@
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
-
     </main>
 
     <!--* Footer -->
@@ -823,6 +779,10 @@
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
     <script src="../Scripts/checkLinks.js" defer></script>
-
+    <script
+      src="../Scripts/metaLoader.js"
+      type="text/javascript"
+      defer
+    ></script>
   </body>
 </html>
