--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -1,48 +1,6 @@
 <!DOCTYPE html>
 <html lang="de" data-page="portfolio german">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description of the webpage for SEO -->
-    <meta
-      name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
-    />
-
-    <!-- Viewport settings for responsive design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords relevant to the portfolio for SEO -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the webpage -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-
-    <!-- Instructions for search engine indexing -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for Portfolio Page (German) -->
-    <meta property="og:title" content="Kathrin Peled - Portfolio" />
-    <meta
-      property="og:description"
-      content="Entdecken Sie meine Webentwicklungsprojekte und Fähigkeiten."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/portfolio-german.html"
-    />
-    <meta property="og:type" content="website" />
 
     <!-- Alternate language links for SEO -->
     <link
@@ -844,6 +802,7 @@
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
     <script src="../Scripts/checkLinks.js" defer></script>
+    <script src="../Scripts/metaLoader.js" type="text/javascript" defer></script>
 
   </body>
 </html>
