--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -1,49 +1,6 @@
 <!DOCTYPE html>
 <html lang="de" data-page="resumeMobile german">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description of the portfolio for SEO and social sharing -->
-    <meta
-      name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
-    />
-
-    <!-- Viewport settings for responsive design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for SEO -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for color scheme preferences -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-
-    <!-- Robots meta tag for search engine indexing -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for Mobile Resume Page (German) -->
-    <meta property="og:title" content="Kathrin Peled - Mobiler Lebenslauf" />
-    <meta
-      property="og:description"
-      content="Sehen Sie sich meinen beruflichen Lebenslauf an, der für mobile Geräte optimiert ist."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/resume-mobile-german.html"
-    />
-    <meta property="og:type" content="website" />
-
     <!-- Alternate links for different languages -->
     <link
       rel="alternate"
@@ -800,6 +757,10 @@
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
     <script src="../Scripts/checkLinks.js" defer></script>
-
+    <script
+      src="../Scripts/metaLoader.js"
+      type="text/javascript"
+      defer
+    ></script>
   </body>
 </html>
