--- a/index-german.html
+++ b/index-german.html
@@ -1,51 +1,6 @@
 <!DOCTYPE html>
 <html lang="de" data-page="index german">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description for the portfolio page -->
-    <meta
-      name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
-    />
-
-    <!-- Viewport settings for responsive design (commented out for maximum scale) -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for search engine optimization -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for the German homepage URL for social media sharing -->
-    <meta property="og:url" content="https://draculady.de/index-german.html" />
-
-    <!-- Color scheme preference for the page -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draclady" />
-
-    <!-- Instructions for web crawlers -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for German Homepage -->
-    <meta
-      property="og:title"
-      content="Kathrin Peled - Webentwicklerin Portfolio"
-    />
-    <meta
-      property="og:description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit ihren Webentwicklungsprojekten und Fähigkeiten."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta property="og:url" content="https://draculady.de/index-german.html" />
-    <meta property="og:type" content="website" />
 
     <!-- Alternate links for different languages -->
     <link
@@ -778,6 +733,7 @@
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js"></script>
     <script src="./Scripts/checkLinks.js" defer></script>
+    <script src="./Scripts/metaLoader.js" type="text/javascript" defer></script>
 
   </body>
 </html>
