--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -1,47 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-page="contact english">
   <head>
-    <!-- Character encoding -->
-    <meta charset="UTF-8" />
-
-    <!-- Meta description -->
-    <meta
-      name="description"
-      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
-    />
-
-    <!-- Viewport settings for responsiveness -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- SEO keywords -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Color scheme preference -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author and robot instructions -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for social sharing -->
-    <meta property="og:title" content="Contact Kathrin Peled" />
-    <meta
-      property="og:description"
-      content="Get in touch with me for collaborations and inquiries."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/contact-english.html"
-    />
-    <meta property="og:type" content="website" />
-
+   
     <!-- Language versions (hreflang) -->
     <link
       rel="alternate"
@@ -676,6 +636,8 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
+    <script src="../Scripts/metaLoader.js" type="text/javascript" defer></script>
+
     <!-- <script src="../Scripts/checkLinks.js" defer></script> -->
 
 
