--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -1,47 +1,6 @@
 <!DOCTYPE html>
 <html lang="de" data-page="contact german">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description for SEO and browser previews -->
-    <meta
-      name="description"
-      content="Entdecken Sie Kathrin Peleds Portfolio mit Webentwicklungsprojekten. Kontaktieren Sie sie für Kooperationen."
-    />
-    <!-- Viewport settings for responsive design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for search engine optimization -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for specifying the color scheme -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draclady" />
-
-    <!-- Robots meta tag for search engine indexing -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for Contact Page (German) -->
-    <meta property="og:title" content="Kontakt Kathrin Peled" />
-    <meta
-      property="og:description"
-      content="Nehmen Sie Kontakt mit mir auf für Kooperationen und Anfragen."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/contact-german.html"
-    />
-    <meta property="og:type" content="website" />
 
     <!-- Alternate links for multilingual support -->
     <link
@@ -675,6 +634,8 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
+    <script src="../Scripts/metaLoader.js" type="text/javascript" defer></script>
+
     <!-- <script src="../Scripts/checkLinks.js" defer></script> -->
 
 
