--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -1,48 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-page="files english">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description of the portfolio for search engines -->
-    <meta
-      name="description"
-      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
-    />
-
-    <!-- Viewport settings for responsive design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for search engine optimization -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for color scheme preferences -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-
-    <!-- Robots meta tag to control indexing -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for sharing on social media -->
-    <meta property="og:title" content="Files by Kathrin Peled" />
-    <meta
-      property="og:description"
-      content="Explore the files and resources shared by Kathrin Peled."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/files-english.html"
-    />
-    <meta property="og:type" content="website" />
 
     <!-- Alternate Language Links for multilingual support -->
     <link
@@ -235,5 +193,7 @@
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
     <script src="../Scripts/checkLinks.js" defer></script>
+    <script src="../Scripts/metaLoader.js" type="text/javascript" defer></script>
+
   </body>
 </html>
