--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -1,49 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" data-page="resume english">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description of the page for search engines and social media -->
-    <meta
-      name="description"
-      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
-    />
-
-    <!-- Viewport settings for responsive design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for SEO optimization -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-
-    <!-- Directives for search engine crawlers -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for Resume Page -->
-    <meta property="og:title" content="Kathrin Peled - Resume" />
-    <meta
-      property="og:description"
-      content="View my professional resume and experience."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/resume-english.html"
-    />
-    <meta property="og:type" content="website" />
-
     <!-- Links for alternate language versions of the page -->
     <link
       rel="alternate"
@@ -815,6 +772,10 @@
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
     <script src="../Scripts/checkLinks.js" defer></script>
-
+    <script
+      src="../Scripts/metaLoader.js"
+      type="text/javascript"
+      defer
+    ></script>
   </body>
 </html>
