--- a/Pages/timeline-german.html
+++ b/Pages/timeline-german.html
@@ -1,49 +1,6 @@
 <!DOCTYPE html>
 <html lang="de" data-page="timeline german">
   <head>
-    <!-- Character encoding for the document -->
-    <meta charset="UTF-8" />
-
-    <!-- Description of the webpage for search engines and previews -->
-    <meta
-      name="description"
-      content="Explore Kathrin Peled's portfolio, showcasing her web development projects and skills. Contact her for collaborations."
-    />
-
-    <!-- Viewport settings for responsive design -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- Keywords for search engine optimization -->
-    <meta
-      name="keywords"
-      content="Kathrin Peled, web developer, portfolio, web development projects, front-end development, Berlin, resume, hire, contact"
-    />
-
-    <!-- Meta tag for social media profile link (less common, more for SEO purposes) -->
-    <meta name="color-scheme" content="light only" />
-
-    <!-- Author of the document -->
-    <meta name="author" content="Kathrin Peled Draculady" />
-
-    <!-- Search engine crawling directives -->
-    <meta name="robots" content="index, follow" />
-
-    <!-- OpenGraph Meta Tags for Mobile Resume Page -->
-    <meta property="og:title" content="Kathrin Peled - timeline" />
-    <meta
-      property="og:description"
-      content="Entdecken Sie meinen Lebenslauf, der als Zeitachse gestaltet wurde, um Layout und Lesbarkeit zu verbessern."
-    />
-    <meta
-      property="og:image"
-      content="https://draculady.de/Pictures/Profile_Picture.webp"
-    />
-    <meta
-      property="og:url"
-      content="https://draculady.de/Pages/timeline-german.html"
-    />
-    <meta property="og:type" content="website" />
-
     <!-- Alternate language versions of the page -->
     <link
       rel="alternate"
@@ -557,6 +514,10 @@
     <script src="../Scripts/transfer-resume.js"></script>
     <script src="../Scripts/timeline-filter.js"></script>
     <script src="../Scripts/checkLinks.js" defer></script>
-
+    <script
+      src="../Scripts/metaLoader.js"
+      type="text/javascript"
+      defer
+    ></script>
   </body>
 </html>
