Added Umami Analytics scripts

--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" data-page="files english">
   <head>
-
+    <!-- Umami-Cloud Analytics -->
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="448384d0-e774-43e9-bc43-57a16dcb756f"
+    ></script>
     <!-- Alternate Language Links for multilingual support -->
     <link
       rel="alternate"
