--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="de" data-page="resume german">
   <head>
+        <!-- Umami-Cloud Analytics -->
+        <script
+        defer
+        src="https://cloud.umami.is/script.js"
+        data-website-id="448384d0-e774-43e9-bc43-57a16dcb756f"
+      ></script>
     <!-- Alternate language links for SEO and localization -->
     <link
       rel="alternate"
