Added Umami Analytics scripts

--- a/index.html
+++ b/index.html
@@ -892,7 +892,22 @@
                   </div>
                   <div><p>Linux</p></div>
                 </div>
-
+                <div class="skill">
+                  <div class="svg-icon">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="3rem"
+                      height="3rem"
+                      viewBox="0 0 512 512"
+                    >
+                      <path
+                        fill="white"
+                        d="m294.5 122l112.9 50.2L294.5 285zM79 500.6l199.2-199.2l-60.8-60.4zM0 11.4l284.9 283.2V114.4zm465.1 103h-164L512 208.2z"
+                      />
+                    </svg>
+                  </div>
+                  <div><p>Snap</p></div>
+                </div>
                 <div class="skill">
                   <div class="svg-icon">
                     <svg
