Added Umami Analytics scripts

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                   <div class="svg-icon">
                     <i class="bx bxs-devices" aria-hidden="true"></i>
                   </div>
-                  <div><p>Responsive Design</p></div>
+                  <div><p>Responsive <br> Design</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -561,7 +561,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Mongo Atlas</p></div>
+                  <div><p>Mongo <br> Atlas</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -581,7 +581,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Mongo Compass</p></div>
+                  <div><p>Mongo <br> Compass</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -708,7 +708,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Microsoft Office</p></div>
+                  <div><p>Microsoft <br> Office</p></div>
                 </div>
               </div>
             </div>
@@ -780,7 +780,7 @@
                   <div class="svg-icon">
                     <i class="fa-solid fa-terminal" aria-hidden="true"></i>
                   </div>
-                  <div><p>Command Line</p></div>
+                  <div><p>Command <br> Line</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -792,7 +792,7 @@
                   <div class="svg-icon">
                     <i class="bx bxl-visual-studio" aria-hidden="true"></i>
                   </div>
-                  <div><p>Visual Studio</p></div>
+                  <div><p>Visual <br> Studio</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -808,7 +808,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Google Lighthouse</p></div>
+                  <div><p>Google <br> Lighthouse</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -922,7 +922,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Google Analytics</p></div>
+                  <div><p>Google <br> Analytics</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -938,7 +938,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Google Search Console</p></div>
+                  <div><p>Google <br> Search <br> Console</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
