--- a/index-german.html
+++ b/index-german.html
@@ -475,7 +475,7 @@
                   <div class="svg-icon">
                     <i class="bx bxs-devices" aria-hidden="true"></i>
                   </div>
-                  <div><p>Responsive Design</p></div>
+                  <div><p>Responsive <br> Design</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -569,7 +569,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Mongo Atlas</p></div>
+                  <div><p>Mongo <br> Atlas</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -589,7 +589,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Mongo Compass</p></div>
+                  <div><p>Mongo <br> Compass</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -716,7 +716,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Microsoft Office</p></div>
+                  <div><p>Microsoft <br> Office</p></div>
                 </div>
               </div>
             </div>
@@ -788,7 +788,7 @@
                   <div class="svg-icon">
                     <i class="fa-solid fa-terminal" aria-hidden="true"></i>
                   </div>
-                  <div><p>Command Line</p></div>
+                  <div><p>Command <br> Line</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -800,7 +800,7 @@
                   <div class="svg-icon">
                     <i class="bx bxl-visual-studio" aria-hidden="true"></i>
                   </div>
-                  <div><p>Visual Studio</p></div>
+                  <div><p>Visual <br> Studio</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -816,7 +816,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Google Lighthouse</p></div>
+                  <div><p>Google <br> Lighthouse</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -930,7 +930,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Google Analytics</p></div>
+                  <div><p>Google <br> Analytics</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
@@ -946,7 +946,7 @@
                       />
                     </svg>
                   </div>
-                  <div><p>Google Search Console</p></div>
+                  <div><p>Google <br> Search <br> Console</p></div>
                 </div>
                 <div class="skill">
                   <div class="svg-icon">
