new about section

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en" data-page="contact english">
   <head>
-       <!-- Umami-Cloud Analytics -->
-       <script
-       defer
-       src="https://cloud.umami.is/script.js"
-       data-website-id="448384d0-e774-43e9-bc43-57a16dcb756f"
-     ></script>
+    <!-- Umami-Cloud Analytics -->
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="448384d0-e774-43e9-bc43-57a16dcb756f"
+    ></script>
     <!-- Language versions (hreflang) -->
     <link
       rel="alternate"
@@ -36,11 +36,11 @@
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
-        <!--  Font Awesome and Boxicons stylesheet -->
-        <link rel="stylesheet" href="../Styles/boxicons.min.css" />
-        <link rel="preload" href="../Styles/all.min.css" as="style" />
-        <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
-        <link rel="stylesheet" href="../Styles/all.min.css" />
+    <!--  Font Awesome and Boxicons stylesheet -->
+    <link rel="stylesheet" href="../Styles/boxicons.min.css" />
+    <link rel="preload" href="../Styles/all.min.css" as="style" />
+    <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
+    <link rel="stylesheet" href="../Styles/all.min.css" />
 
     <!-- Schema.js script for structured data -->
     <script src="../Scripts/schema.js" defer></script>
@@ -591,6 +591,9 @@
               <div class="h3-title">
                 <h3 id="business-card-title">Save My Business Card</h3>
               </div>
+              <div class="paragraph-div">
+                <p>For private projects</p>
+              </div>
               <div class="business-card">
                 <a
                   href="../Files/Visit-Card.jpg"
@@ -629,7 +632,6 @@
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
-
     </main>
     <!--* Footer -->
     <div id="footer"></div>
@@ -641,10 +643,12 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
-    <script src="../Scripts/metaLoader.js" type="text/javascript" defer></script>
+    <script
+      src="../Scripts/metaLoader.js"
+      type="text/javascript"
+      defer
+    ></script>
 
     <!-- <script src="../Scripts/checkLinks.js" defer></script> -->
-
-
   </body>
 </html>
