--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -29,7 +29,7 @@
       rel="canonical"
       href="https://draculady.de/Pages/contact-german.html"
     />
-    
+
     <!-- Preloading main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
@@ -38,7 +38,6 @@
     <link rel="preload" href="../Styles/all.min.css" as="style" />
     <link rel="preload" href="../Styles/boxicons.min.css" as="style" />
     <link rel="stylesheet" href="../Styles/all.min.css" />
-
 
     <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
@@ -576,6 +575,9 @@
               <div class="h3-title">
                 <h3 id="contact-card-title">Speichere mich als Kontakt</h3>
               </div>
+              <div class="paragraph-div">
+                <p>Für private Projekte</p>
+              </div>
               <a
                 href="../Files/Contact-Card.vcf"
                 download
@@ -627,7 +629,6 @@
       <!-- ~ custom curser -->
       <div class="custom-cursor"></div>
       <!-- ~ custom curser -->
-
     </main>
     <!--* Footer -->
     <div id="footer"></div>
@@ -639,10 +640,12 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
-    <script src="../Scripts/metaLoader.js" type="text/javascript" defer></script>
+    <script
+      src="../Scripts/metaLoader.js"
+      type="text/javascript"
+      defer
+    ></script>
 
     <!-- <script src="../Scripts/checkLinks.js" defer></script> -->
-
-
   </body>
 </html>
