--- a/index-german.html
+++ b/index-german.html
@@ -311,7 +311,8 @@
               </div>
               <div class="about-text-box">
                 <p>
-                  <span id="portfolio-and-contact" class="title-span"><i class="fa-solid fa-briefcase" aria-hidden="true"></i> 
+                  <span id="portfolio-and-contact" class="title-span"
+                    ><i class="fa-solid fa-briefcase" aria-hidden="true"></i>
                     Portfolio und Kontakt
                   </span>
                   <span class="link-span">
@@ -704,18 +705,16 @@
                       xmlns="http://www.w3.org/2000/svg"
                       width="3rem"
                       height="3rem"
-                      viewBox="0 0 16 16"
+                      viewBox="0 0 20 20"
                     >
                       <path
                         fill="white"
-                        fill-rule="evenodd"
-                        d="M5.02 11.419L4.691 10H2.808l-.327 1.419a.75.75 0 1 1-1.462-.338L2.407 5.07a1.379 1.379 0 0 1 2.686 0l1.388 6.012a.75.75 0 1 1-1.462.338m-1.27-5.5l.597 2.58H3.155zM14.5 4.75a.75.75 0 0 0-1.5 0v6.5a.75.75 0 0 0 1.5 0zM8.25 4a.75.75 0 0 0-.75.75v6.5a.75.75 0 0 0 1.5 0V9.5h.5a2.75 2.75 0 0 0 0-5.5zM9.5 8H9V5.5h.5a1.25 1.25 0 0 1 0 2.5"
-                        clip-rule="evenodd"
+                        d="M16 13c-1.3 0-2.4.8-2.8 2H9c0-.7-.2-1.3-.5-1.8l7.1-7.3c.3 0 .6.1.9.1C17.9 6 19 4.9 19 3.5S17.9 1 16.5 1S14 2.1 14 3.5c0 .3.1.7.2 1l-7 7.2c-.6-.5-1.4-.7-2.2-.7V6.8C6.2 6.4 7 5.3 7 4c0-1.7-1.3-3-3-3S1 2.3 1 4c0 1.3.8 2.4 2 2.8v4.7c-1.2.7-2 2-2 3.4c0 2.2 1.8 4 4 4c1.5 0 2.8-.8 3.4-2h4.7c.4 1.1 1.5 2 2.8 2c1.6 0 3-1.3 3-3C19 14.3 17.6 13 16 13"
                       />
                     </svg>
                   </div>
                   <div>
-                    <p>API</p>
+                    <p>REST<br />API</p>
                   </div>
                 </div>
               </div>
