corrections for timelines

--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -365,7 +365,7 @@
                     <p>
                       &#9898; Consulting, service and selling computers,
                       hardware,cellular and electronic goods to private
-                      customers and business.
+                      customers and businesses.
                       <br />
                       &#9898; Frontal customer service includes handling
                       defective products, customer returns, and complaints.
@@ -380,14 +380,11 @@
                     </div>
                     <h4>Top Mobile, Israel</h4>
                     <p>
-                      &#9898; Frontal and telephonic sales and customers service
+                      &#9898; Frontal and telephonic sales and customer service
                       in a cellular shop.
                       <br />
                       &#9898; Selling cellular phones, computers and
                       accessories.
-                      <br />
-                      &#9898; Customers service for private customers and
-                      business (telephonic and frontal).
                       <br />
                       &#9898; Online shop - manage orders, answer customers
                       questions, solving problems and send the products to the
@@ -432,12 +429,12 @@
                     </div>
                     <h4>G3 Communications solutions (Celltech LTD)</h4>
                     <p>
-                      &#9898; Frontal sales and customers service in a cellular
+                      &#9898; Frontal sales and customer service in a cellular
                       shop.
                       <br />
                       &#9898; Selling cellular, accessories and gadgets.
                       <br />
-                      &#9898; Customers service - Private customers and business
+                      &#9898; Customer service - Private customers and businesses
                       (wholesale shop).
                       <br />
                       &#9898; Worked also with the suppliers of the company -
