--- a/PagesComponents/header-de.html
+++ b/PagesComponents/header-de.html
@@ -10,8 +10,8 @@
       />
     </div>
     <h1 data-text="Kathrin Peled">
-      Kathrin Peled <br />
-      Web Entwicklerin
+      Kreative Ideen <br />
+      Zum Leben Erwecken
     </h1>
     <nav>
       <ul>
