--- a/PagesComponents/header-en.html
+++ b/PagesComponents/header-en.html
@@ -10,8 +10,8 @@
       />
     </div>
     <h1 data-text="Kathrin Peled">
-      Kathrin Peled <br />
-      Web Developer
+      Bringing Creative <br />
+      Ideas To Life
     </h1>
     <nav>
       <ul>
