--- a/index.html
+++ b/index.html
@@ -1357,6 +1357,48 @@
                       <p>Umami Cloud</p>
                     </div>
                   </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
+                        viewBox="0 0 24 24"
+                      >
+                        <rect width="24" height="24" fill="none" />
+                        <path
+                          fill="#fff"
+                          d="M21 16v-3c0-1.11-.89-2-2-2h-6V8h2V2H9v6h2v3H5c-1.11 0-2 .89-2 2v3H1v6h6v-6H5v-3h6v3H9v6h6v-6h-2v-3h6v3h-2v6h6v-6zM11 4h2v2h-2zM5 20H3v-2h2zm8 0h-2v-2h2zm8 0h-2v-2h2z"
+                        />
+                      </svg>
+                    </div>
+                    <div>
+                      <p>Sitemap</p>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
+                        viewBox="0 0 24 24"
+                      >
+                        <rect width="24" height="24" fill="none" />
+                        <path
+                          fill="none"
+                          stroke="#fff"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M6 6a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v4a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2zm6-4v2m-3 8v9m6-9v9M5 16l4-2m6 0l4 2M9 18h6M10 8v.01M14 8v.01"
+                        />
+                      </svg>
+                    </div>
+                    <div>
+                      <p>Robots</p>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
