--- a/index.html
+++ b/index.html
@@ -804,6 +804,39 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="3rem"
                         height="3rem"
+                        viewBox="0 0 24 24"
+                      >
+                        <rect width="24" height="24" fill="none" />
+                        <g
+                          fill="none"
+                          stroke="#fff"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="1.5"
+                        >
+                          <path
+                            d="M17.5 19H22m0 0l-2.5-2.5M22 19l-2.5 2.5M12 2L9.5 4.5L12 7"
+                          />
+                          <path d="M10.5 4.5a7.5 7.5 0 0 1 0 15H2" />
+                          <path
+                            d="M6.756 5.5A7.5 7.5 0 0 0 3 12c0 1.688.558 3.246 1.5 4.5"
+                          />
+                        </g>
+                      </svg>
+                    </div>
+                    <div>
+                      <p>
+                        Agile <br />
+                        Method
+                      </p>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
                         viewBox="0 0 512 512"
                       >
                         <rect width="512" height="512" fill="none" />
