--- a/index-german.html
+++ b/index-german.html
@@ -587,6 +587,31 @@
                         xmlns="http://www.w3.org/2000/svg"
                         width="3rem"
                         height="3rem"
+                        viewBox="0 0 24 24"
+                      >
+                        <rect width="24" height="24" fill="none" />
+                        <g
+                          fill="none"
+                          stroke="#fff"
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                        >
+                          <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                          <path
+                            d="M5 12V5a2 2 0 0 1 2-2h7l5 5v4M4 20.25c0 .414.336.75.75.75H6a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1H5a1 1 0 0 1-1-1v-1a1 1 0 0 1 1-1h1.25a.75.75 0 0 1 .75.75m3-.75l2 6l2-6m6 0h-1a2 2 0 0 0-2 2v2a2 2 0 0 0 2 2h1v-3"
+                          />
+                        </g>
+                      </svg>
+                    </div>
+                    <div><p>SVG</p></div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
                         viewBox="0 0 16 16"
                       >
                         <path
@@ -751,6 +776,23 @@
                       </svg>
                     </div>
                     <div><p>SAP</p></div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
+                        viewBox="0 0 24 24"
+                      >
+                        <rect width="24" height="24" fill="none" />
+                        <path
+                          fill="#fff"
+                          d="M11.53 2c0 2.4 1.97 4.35 4.35 4.35h1.78v1.7c0 2.4 1.94 4.34 4.34 4.35V2.84a.84.84 0 0 0-.84-.84zM6.77 6.8a4.36 4.36 0 0 0 4.34 4.34h1.8v1.72a4.36 4.36 0 0 0 4.34 4.34V7.63a.84.84 0 0 0-.83-.83zM2 11.6c0 2.4 1.95 4.34 4.35 4.34h1.78v1.72c.01 2.39 1.95 4.34 4.34 4.34v-9.57a.84.84 0 0 0-.84-.84z"
+                        />
+                      </svg>
+                    </div>
+                    <div><p>Jira</p></div>
                   </div>
                   <div class="skill">
                     <div class="svg-icon">
@@ -1393,7 +1435,10 @@
                       </svg>
                     </div>
                     <div>
-                      <p>Umami Cloud</p>
+                      <p>
+                        Umami <br />
+                        Cloud
+                      </p>
                     </div>
                   </div>
                   <div class="skill">
@@ -1436,6 +1481,38 @@
                     </div>
                     <div>
                       <p>Robots</p>
+                    </div>
+                  </div>
+                  <div class="skill">
+                    <div class="svg-icon">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="3rem"
+                        height="3rem"
+                        viewBox="0 0 48 48"
+                      >
+                        <rect width="48" height="48" fill="none" />
+                        <g fill="none" stroke="#fff" stroke-width="4">
+                          <rect width="40" height="32" x="4" y="8" rx="1.633" />
+                          <path
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            d="M16 18.948c-2-2.948-5.502-1.01-5.251 2.02C11 24 15 24 15.249 27.032C15.5 30.062 12 32 10 29.051M26 18h-4v13h4m-4-6h4"
+                          />
+                          <rect
+                            width="6"
+                            height="13"
+                            x="32"
+                            y="18"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            rx="3"
+                          />
+                        </g>
+                      </svg>
+                    </div>
+                    <div>
+                      <p>SEObility</p>
                     </div>
                   </div>
                 </div>
